# rust-docs-mcp-server

./: .gitignore  CHANGELOG.md  CHANGES.md  Cargo.toml  README.md  REVIEW.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: changelog.yml  release.yml
examples/: chunker_demo.rs
src/: crate_discovery.rs  docLoader.ts  doc_generator.rs  doc_loader.rs  document_chunker.rs  embedding_cache_service.rs  embeddings.rs  error.rs  fast_hash.rs  global_cache.rs  index.ts  lib.rs  main.rs  server.rs  service.rs  state.rs  tests.rs  transport.rs  utils.rs
src/examples/: document_chunker_example.rs
tests/: doc_loader_comprehensive_test.rs  doc_loader_test.rs  document_chunker_test.rs  embedding_cache_service_test.rs  embedding_test.rs  integration_test.rs  mcp_server_test.rs  process_html_documents_test.rs  server_comprehensive_test.rs  test_config_generator.rs  test_helpers.rs  utils_test.rs
